--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,17 +1,23 @@
 .display {
   display: flex;
   justify-content: center;
-  gap: 16px;
-  margin: 10%;
+  gap: 4px;
+  margin: 5%;
   align-items: end;
+  max-width: 100vw;
+  overflow-x: auto;
+  padding: 2%;
 }
 
 .number {
   font-size: 18px;
-  width: 40px;
-  /* background-color: orange; */
+  width: 8px;
+  flex-grow: 0;
+  flex-shrink: 0;
   text-align: center;
-  border-radius: 8px 8px 4px 4px;
+  border-radius: 6px 6px 0px 0px;
+  font-weight: 900;
+  box-shadow: inset 2px -2px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .buttons {
